--- a/src/app/setting/division/division.component.html
+++ b/src/app/setting/division/division.component.html
@@ -124,7 +124,7 @@
     <div class="modal-body" ngbAutofocus>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Name</mat-label>
-        <input matInput type="text" placeholder="Name" formControlName="name">
+        <input matInput type="text" placeholder="Name" formControlName="name" maxlength="100" required />
         <mat-error *ngIf="hubForm.get('name')!.hasError('required')">
           Name is required
         </mat-error>
