--- a/src/app/shared/components/coll/coll.component.html
+++ b/src/app/shared/components/coll/coll.component.html
@@ -9,7 +9,7 @@
     <div class="modal-body" ngbAutofocus>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Name</mat-label>
-        <input matInput type="text" placeholder="New Collection Name" required formControlName="name">
+        <input matInput type="text" placeholder="New Collection Name" formControlName="name" maxlength="100" required />
         <mat-error *ngIf="colctnForm.get('name')!.hasError('required')">
           Name is required
         </mat-error>
