--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -382,7 +382,7 @@
         <div class="col-6">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>First Name</mat-label>
-            <input matInput type="text" placeholder="First Name" formControlName="firstName" required>
+            <input matInput type="text" placeholder="First Name" formControlName="firstName" maxlength="50" required />
             <mat-error *ngIf="usrForm.get('firstName')!.hasError('required')">
               First Name is required
             </mat-error>
@@ -391,7 +391,7 @@
         <div class="col-6">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Last Name</mat-label>
-            <input matInput type="text" placeholder="Last Name" formControlName="lastName" required>
+            <input matInput type="text" placeholder="Last Name" formControlName="lastName" maxlength="50" required />
             <mat-error *ngIf="usrForm.get('lastName')!.hasError('required')">
               Last Name is required
             </mat-error>
@@ -402,7 +402,7 @@
         <div class="col-6">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Email</mat-label>
-            <input matInput type="text" placeholder="Email" formControlName="email" required>
+            <input matInput type="text" placeholder="Email" formControlName="email" maxlength="100" required>
             <mat-error *ngIf="usrForm.get('email')!.hasError('required')">
               Email is required
             </mat-error>
