--- a/src/app/web-app/view/view.component.html
+++ b/src/app/web-app/view/view.component.html
@@ -182,7 +182,7 @@
                 </div>
                 <mat-form-field appearance="outline" class="w-100">
                   <mat-label>Leave a comment</mat-label>
-                  <textarea matInput placeholder="Leave a comment" [(ngModel)]="cmnt" name="cmnt"></textarea>
+                  <textarea matInput placeholder="Leave a comment" [(ngModel)]="cmnt" name="cmnt" maxlength="500" required></textarea>
                 </mat-form-field>
               </div>
               <div class="form-group text-right">
