--- a/src/app/web-app/resource/file/file.component.html
+++ b/src/app/web-app/resource/file/file.component.html
@@ -266,7 +266,7 @@
     <div class="modal-body" ngbAutofocus>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Name</mat-label>
-        <input type="text" matInput placeholder="Eg. Hiforce Homepage">
+        <input type="text" matInput placeholder="Eg. Hiforce Homepage" maxlength="100">
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>URL</mat-label>
