--- a/src/app/shared/components/share-mail/share-mail.component.html
+++ b/src/app/shared/components/share-mail/share-mail.component.html
@@ -8,22 +8,57 @@
   <div class="modal-body" ngbAutofocus>
     <div class="row">
       <div class="col-9 border-right">
-        <mat-form-field appearance="outline" class="w-100">
+        <mat-form-field class="w-100" appearance="outline">
           <mat-label>To</mat-label>
-          <input matInput type="text" placeholder="Recipients" formControlName="emailAddresses" required>
+          <mat-chip-list #emailList aria-label="Email addresses" formControlName="emailAddresses">
+            <mat-chip *ngFor="let ea of emailAddresses" selectable removable (removed)="removeChip(ea)">
+              {{ea}}
+              <i class="fa fa-times" matChipRemove></i>
+            </mat-chip>
+            <input placeholder="Add Email Addresses (Separate by comma or enter)" [matChipInputFor]="emailList"
+              [matChipInputSeparatorKeyCodes]="separatorKeysCodes" matChipInputAddOnBlur
+              (matChipInputTokenEnd)="addChips($event)" formControlName="emailAddresses">
+          </mat-chip-list>
         </mat-form-field>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Subject</mat-label>
           <input matInput type="text" placeholder="Subject" formControlName="title" required>
         </mat-form-field>
-        <div class="row">
-          <mat-form-field appearance="outline" class="col-8">
-            <mat-label>Search Content</mat-label>
-            <input matInput type="text" placeholder="Search Content">
-          </mat-form-field>
-          <div class="col-4 mt-3">
-            <div class="btn btn-primary" (click)="openRsrcModal()">
-              <i class="fas fa-file-medical mr-1"></i>Add resource
+        <div class="bg-hi-grey p-2 rounded d-flex">
+          <div class="ml-3 align-self-center">Resources</div>
+          <div class="ml-auto">
+            <button type="button" class="btn btn-primary btn-sm" [disabled]="linkDisabled || disabled || loading"
+              (click)="rsrcBtn(viewMe ? 'done' : 'change')">
+              <app-loader [type]="'btn'" *ngIf="linkDisabled"></app-loader>
+              {{viewMe || linkDisabled ? 'Done' : 'Change Resources'}}
+            </button>
+          </div>
+        </div>
+        <div class="rounded border m-2 p-2">
+          <div class="row mt-2" *ngIf="viewMe">
+            <div class="col-8">
+              <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2" [floatLabel]="'never'">
+                <i matPrefix class="fas fa-search"></i>
+                <input matInput placeholder="Search Content">
+              </mat-form-field>
+            </div>
+            <div class="col-4">
+              <div class="btn btn-primary" (click)="openRsrcModal()">
+                <i class="fas fa-file-medical mr-1"></i>Add resource
+              </div>
+            </div>
+          </div>
+          <app-loader [type]="'div'" *ngIf="loading"></app-loader>
+          <div class="view-selected" *ngIf="!loading">
+            <div class="d-flex bg-hi-grey border rounded px-3 py-1 my-2" *ngFor="let vs of viewSel">
+              <img src="{{vs.pdfImagePath ? vs.pdfImagePath : vs.pdfImage ? vs.pdfImage : defImg}}">
+              <div class="ml-2 align-self-center w-75">
+                <div class="text-truncate">{{vs.name}}</div>
+                <div class="text-secondary" *ngIf="vs.pageNo">Page {{vs.pageNo}}</div>
+              </div>
+              <div class="ml-auto align-self-center" *ngIf="viewMe">
+                <i class="fas fa-trash-alt curs-ptr" (click)="removeMe(vs)"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -40,7 +75,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button type="submit" class="btn btn-primary" [disabled]="emailForm!.invalid || disabled">
+    <button type="submit" class="btn btn-primary" [disabled]="emailForm!.invalid || disabled || viewMe">
       <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>
       Save
     </button>
