--- a/src/app/shared/components/share-mail/share-mail.component.scss
+++ b/src/app/shared/components/share-mail/share-mail.component.scss
@@ -1,10 +1,14 @@
 .view-selected {
-  img {
-    max-width: 2rem;
-    max-height: 3rem;
-  }
+  .bg-hi-grey {
+    min-height: 3.45rem;
 
-  .text-secondary {
-    font-size: 12px;
+    img {
+      max-width: 2rem;
+      max-height: 3rem;
+    }
+
+    .text-secondary {
+      font-size: 12px;
+    }
   }
 }
