--- a/src/app/web-app/resource/collection/collection-list/collection-list.component.html
+++ b/src/app/web-app/resource/collection/collection-list/collection-list.component.html
@@ -54,7 +54,8 @@
                 <div class="dropdown-menu" aria-labelledby="shareDD">
                   <a class="dropdown-item curs-ptr" (click)="cmnModal('email', undefined, colctn)"><i
                       class="fa fa-envelope mr-1"></i>Email</a>
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink', undefined, colctn)"><i
+                      class="fa fa-link mr-1"></i>Get a
                     link</a>
                 </div>
               </div>
@@ -129,7 +130,8 @@
                 <div class="dropdown-menu" aria-labelledby="shareDD">
                   <a class="dropdown-item curs-ptr" (click)="cmnModal('email', undefined, colctn)"><i
                       class="fa fa-envelope mr-1"></i>Email</a>
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink', undefined, colctn)"><i
+                      class="fa fa-link mr-1"></i>Get a
                     link</a>
                 </div>
               </div>
