--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -6,7 +6,7 @@
       <div class="btn btn-light" (click)="cmnModal('email', undefined, undefined, selColctn)">
         <i class="fa fa-envelope mr-1"></i>
       </div>
-      <div class="btn btn-light" (click)="cmnModal('getLink')">
+      <div class="btn btn-light" (click)="cmnModal('getLink', undefined, undefined, selColctn)">
         <i class="fa fa-link mr-1"></i>
       </div>
       <div class="dropdown align-self-center mr-5">
@@ -57,7 +57,8 @@
                   <!-- <h6 class="ml-2 text-white-50">External Sharing</h6> -->
                   <a class="dropdown-item curs-ptr" (click)="cmnModal('email', undefined, cntnt)"><i
                       class="fa fa-envelope mr-1"></i>Email</a>
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink', undefined, cntnt)"><i
+                      class="fa fa-link mr-1"></i>Get a
                     link</a>
                   <!-- <div class="dropdown-divider"></div>
                   <h6 class="ml-2 text-white-50">Internal Sharing</h6>
@@ -127,7 +128,8 @@
                 <div class="dropdown-menu" aria-labelledby="shareDD">
                   <a class="dropdown-item curs-ptr" (click)="cmnModal('email', undefined, cntnt)"><i
                       class="fa fa-envelope mr-1"></i>Email</a>
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink', undefined, cntnt)"><i
+                      class="fa fa-link mr-1"></i>Get a
                     link</a>
                 </div>
               </div>
