--- a/src/app/web-app/resource/file/file.component.html
+++ b/src/app/web-app/resource/file/file.component.html
@@ -109,7 +109,7 @@
                         <a class="dropdown-item" (click)="cmnModal('email', f)">
                           <i class="fa fa-envelope mr-1"></i>Email
                         </a>
-                        <a class="dropdown-item" (click)="cmnModal('getLink')">
+                        <a class="dropdown-item" (click)="cmnModal('getLink', f)">
                           <i class="fa fa-link mr-1"></i>Get a link
                         </a>
                         <div class="dropdown-divider"></div>
@@ -189,7 +189,7 @@
                         <a class="dropdown-item" (click)="cmnModal('email', aF)">
                           <i class="fa fa-envelope mr-1"></i>Email
                         </a>
-                        <a class="dropdown-item" (click)="cmnModal('getLink')">
+                        <a class="dropdown-item" (click)="cmnModal('getLink', aF)">
                           <i class="fa fa-link mr-1"></i>Get a link
                         </a>
                       </div>
