--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,12 +1,12 @@
 <div class="text-center mt-4"><img src="assets/images/logo.png" alt="Logo"></div>
-<div class="card w-40 mx-auto my-4">
+<div class="card w-40 mx-auto my-4 w-lg-50 w-md-60 w-sm-70 w-xs-90">
   <div class="card-header text-center">
     <h4 class="mb-0 font-weight-bold">Forgot Password</h4>
   </div>
-  <div class="card-body p-5">
+  <div class="card-body p-3 p-sm-5">
     <div *ngIf="forgPassForm">
-      <form class="w-75 mx-auto p-4" name="forgPassForm" (ngSubmit)="forgotPassword()" [formGroup]="forgPassForm"
-        novalidate>
+      <form class="w-75 w-md-90 w-sm-100 mx-auto p-4" name="forgPassForm" (ngSubmit)="forgotPassword()"
+        [formGroup]="forgPassForm" novalidate>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Email</mat-label>
           <input matInput formControlName="email" maxlength="50" required>
