--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,11 +1,12 @@
 <div class="text-center mt-4"><img src="assets/images/logo.png" alt="Logo"></div>
-<div class="card w-40 mx-auto my-4">
+<div class="card mx-auto my-4 w-40 w-lg-50 w-md-60 w-sm-70 w-xs-90">
   <div class="card-header text-center">
     <h4 class="mb-0 font-weight-bold">Login</h4>
   </div>
-  <div class="card-body p-5">
+  <div class="card-body p-3 p-sm-5">
     <div *ngIf="loginForm">
-      <form class="w-75 mx-auto p-4" name="loginForm" (ngSubmit)="login()" [formGroup]="loginForm" novalidate>
+      <form class="w-75 w-md-90 w-sm-100 mx-auto p-2 p-sm-4" name="loginForm" (ngSubmit)="login()"
+        [formGroup]="loginForm" novalidate>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Email</mat-label>
           <input matInput formControlName="email" maxlength="50" required>
@@ -13,7 +14,8 @@
           <mat-error *ngIf="loginForm.get('email')!.hasError('required')">
             Email is required
           </mat-error>
-          <mat-error *ngIf="!loginForm.get('email')!.hasError('required') && loginForm.get('email')!.hasError('invalidEmail')">
+          <mat-error
+            *ngIf="!loginForm.get('email')!.hasError('required') && loginForm.get('email')!.hasError('invalidEmail')">
             Please enter a valid email address
           </mat-error>
         </mat-form-field>
@@ -24,7 +26,8 @@
           <mat-error *ngIf="loginForm.get('password')!.hasError('required')">
             Password is required
           </mat-error>
-          <mat-error *ngIf="!loginForm.get('password')!.hasError('required') && loginForm.get('password')!.hasError('minlength')">
+          <mat-error
+            *ngIf="!loginForm.get('password')!.hasError('required') && loginForm.get('password')!.hasError('minlength')">
             Password must be at least 6 characters long
           </mat-error>
         </mat-form-field>
