--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,26 +1,30 @@
 <div class="text-center mt-4"><img src="assets/images/logo.png" alt="Logo"></div>
-<div class="card w-40 mx-auto mt-4">
+<div class="card w-40 mx-auto mt-4 w-lg-50 w-md-60 w-sm-70 w-xs-90">
   <div class="card-header text-center">
     <h4 class="mb-0 font-weight-bold">Reset Password</h4>
   </div>
-  <div class="card-body p-5">
+  <div class="card-body p-3 p-sm-5">
     <div *ngIf="resetPassForm">
-      <form class="w-75 mx-auto p-4" name="resetPassForm" (ngSubmit)="resetPassword()" [formGroup]="resetPassForm" novalidate>
+      <form class="w-75 w-md-90 w-sm-100 mx-auto p-4" name="resetPassForm" (ngSubmit)="resetPassword()"
+        [formGroup]="resetPassForm" novalidate>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Password</mat-label>
           <input matInput [type]="hidePass?'password':'text'" formControlName="pswd" maxlength="15" required>
-          <i matSuffix (click)="hidePass = !hidePass" [ngClass]="{'fa-eye': hidePass, 'fa-eye-slash': !hidePass}" class="fas"></i>
+          <i matSuffix (click)="hidePass = !hidePass" [ngClass]="{'fa-eye': hidePass, 'fa-eye-slash': !hidePass}"
+            class="fas"></i>
           <mat-error *ngIf="resetPassForm.get('pswd')!.hasError('required')">
             Password is required
           </mat-error>
-          <mat-error *ngIf="!resetPassForm.get('pswd')!.hasError('required') && resetPassForm.get('pswd')!.hasError('minlength')">
+          <mat-error
+            *ngIf="!resetPassForm.get('pswd')!.hasError('required') && resetPassForm.get('pswd')!.hasError('minlength')">
             Password must be at least 6 characters long
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Confirm Password</mat-label>
           <input matInput [type]="hideCPass?'password':'text'" formControlName="confirmPswd" maxlength="15" required>
-          <i matSuffix (click)="hideCPass = !hideCPass" [ngClass]="{'fa-eye': hideCPass, 'fa-eye-slash': !hideCPass}" class="fas"></i>
+          <i matSuffix (click)="hideCPass = !hideCPass" [ngClass]="{'fa-eye': hideCPass, 'fa-eye-slash': !hideCPass}"
+            class="fas"></i>
           <mat-error *ngIf="resetPassForm.get('confirmPswd')!.hasError('required')">
             Confirm Password is required
           </mat-error>
@@ -30,7 +34,8 @@
           </mat-error>
         </mat-form-field>
         <div class="text-center">
-          <button aria-label="Reset Password" [disabled]="resetPassForm!.invalid || loading" class="mt-2 btn btn-primary">
+          <button aria-label="Reset Password" [disabled]="resetPassForm!.invalid || loading"
+            class="mt-2 btn btn-primary">
             <app-loader [type]="'btn'" *ngIf="loading"></app-loader> <!-- loader -->
             Reset Password
           </button>
