--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 //import url
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@200;400;600&display=swap");
@@ -21,8 +20,42 @@ body {
   color: $hi-dark;
 }
 
+// width classes
+
 .w-40 {
-  width: 40%;
+  width: 40% !important;
+}
+
+@include media-breakpoint-down(lg) {
+  .w-lg-50 {
+    width: 50% !important;
+  }
+}
+
+@include media-breakpoint-down(md) {
+  .w-md-60 {
+    width: 60% !important;
+  }
+
+  .w-md-90 {
+    width: 90% !important;
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  .w-sm-70 {
+    width: 70% !important;
+  }
+
+  .w-sm-100 {
+    width: 100% !important;
+  }
+}
+
+@include media-breakpoint-down(xs) {
+  .w-xs-90 {
+    width: 90% !important;
+  }
 }
 
 .w-fit {
@@ -126,14 +159,6 @@ body {
 button[aria-label="Close"]:focus {
   outline: none;
 }
-
-// angular bootstrap typeahead
-// ngb-typeahead-window {
-//   .active {
-//     background-color: $hi-dark-grey !important;
-//     color: darken($color: $hi-dark, $amount: 15) !important;
-//   }
-// }
 
 // before pseudo element
 .no-before::before {
