remove router check and use loc path, rem token after reset pass, rem isMain chk in sidebar, add/edit hub for superadmin chk, rem extra spaces, get lnk - chk data if exists, clear btn fxd div func, add fxd btn comp with sel and clear func in myfile,chges in varib name and set empty in listing, chk if smrtfldr, then navg, rem extra tern chk

--- a/src/app/home-layout/sidebar/sidebar.component.html
+++ b/src/app/home-layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar sticky-top border-right" *ngIf="isMain">
+<div class="sidebar sticky-top border-right">
   <div class="navbar-nav">
     <ng-container *ngFor="let item of navigation">
       <a *ngIf="item.url" class="nav-item p-2 text-hi-dark pl-3" [routerLinkActive]="['active']" [routerLink]="[item.url]">
