--- a/src/app/shared/components/get-link/get-link.component.html
+++ b/src/app/shared/components/get-link/get-link.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4 class="modal-title" id="modal-basic-title">Common Get a Link</h4>
+  <h4 class="modal-title">Get a Link</h4>
   <button type="button" class="close" aria-label="Close" (click)="modalRef.dismiss('Cross click')">
     <span aria-hidden="true">&times;</span>
   </button>
