--- a/src/app/web-app/resource/file/file.component.html
+++ b/src/app/web-app/resource/file/file.component.html
@@ -35,18 +35,20 @@
               Add
             </button>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="addBtnDD">
-              <a class="dropdown-item curs-ptr" (click)="openModal(fldrModal,'addFldr')"><i
-                  class="fas fa-folder-plus mr-1"></i>
+              <a class="dropdown-item curs-ptr" (click)="openModal(fldrModal,'addFldr')">
+                <i class="fas fa-folder-plus mr-1"></i>
                 Create Folder
               </a>
-              <a class="dropdown-item curs-ptr" (click)="openModal(addURL)"><i class="fa fa-link mr-1"></i>Add URL</a>
+              <a class="dropdown-item curs-ptr" (click)="openModal(addURL, 'url')"><i class="fa fa-link mr-1"></i>Add URL</a>
               <a class="dropdown-item curs-ptr" (click)="uploadBtn(uploadFile)"><i class="fa fa-upload mr-1"></i>
                 Upload from hard drive
-                <input type="file" style="display: none;" #uploadFile>
+                <input type="file" style="display: none;" #uploadFile (change)="uplCntnt($event)">
               </a>
             </div>
           </div>
         </div>
+
+
         <!-- <nav aria-label="breadcrumb" *ngIf="folderNav.length>0">
           <ol class="breadcrumb bg-transparent pl-0 mb-0">
             <li class="breadcrumb-item" *ngFor="let flNav of folderNav;let i=index">
@@ -96,7 +98,7 @@
               <div class="card curs-ptr">
                 <div class="card-body">
                   <div class="imagePreview text-center" (click)="chkFolderAndAdd(f)">
-                    <img src="assets/images/discription.png">
+                    <img [src]="getImg(f)">
                   </div>
                   <div class="options rounded">
                     <div class="dropleft">
@@ -170,7 +172,7 @@
                   </div>
                   <div class="d-flex" *ngIf="!aF.isFldr">
                     <div class="imagePreview border mr-2">
-                      <img src="assets/images/discription.png">
+                      <img [src]="getImg(af)">
                     </div>
                     <div class="name align-self-center">{{aF.name}}</div>
                   </div>
@@ -214,7 +216,6 @@
     </div>
   </div>
 
-  {{selData.length > 0}}ss
   <!-- fixed sel item bootm div -->
   <app-sel-itm-fxd-div [selArr]="selData" (delContent)="delContent(undefined)" [content]="true" *ngIf="selData.length > 0" (clrSelData)="clrSel()">
   </app-sel-itm-fxd-div>
@@ -254,19 +255,30 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-    <div class="modal-body" ngbAutofocus>
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Name</mat-label>
-        <input type="text" matInput placeholder="Eg. Hiforce Homepage" maxlength="100">
-      </mat-form-field>
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>URL</mat-label>
-        <input type="text" matInput placeholder="Eg. https://www.hiforce.com" maxlength="300">
-      </mat-form-field>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Add</button>
-    </div>
+    <form name="urlForm" (ngSubmit)="onUrlSubmit()" [formGroup]="urlForm" novalidate>
+      <div class="modal-body" ngbAutofocus>
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Name</mat-label>
+          <input matInput placeholder="Add a Name" formControlName="name" maxlength="100" required />
+          <mat-error *ngIf="urlForm.get('name')!.hasError('required')">
+            Name is required
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>URL</mat-label>
+          <input matInput placeholder="Add a URL" formControlName="url" maxlength="300" required />
+          <mat-error *ngIf="urlForm.get('url')!.hasError('required')">
+            Url is required
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" [disabled]="urlForm!.invalid || urlDisb">
+          <app-loader [type]="'btn'" *ngIf="urlDisb"></app-loader>
+          Add
+        </button>
+      </div>
+    </form>
   </ng-template>
 
   <!-- share with colleagues -->
